# Anazav

./: Proje  README.md  main.py  pyproject.toml  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_53606e9522d39d55_auth_py.html  z_53606e9522d39d55_routes_py.html  z_53606e9522d39d55_users_py.html  z_57fdb4e82e728119_repository_py.html  z_83bb46b0261c7dc5_config_py.html  z_dd4b322c5e9a5c17_schemas_py.html  z_dd4b322c5e9a5c17_user_py.html  z_defad1a87623d8bf_models_py.html  z_f1aa34bc7b1afc18_db_py.html  z_f1b38b22aeb65474_auth_py.html  z_f1b38b22aeb65474_check_py.html  z_f1b38b22aeb65474_dependencies_py.html  z_f1b38b22aeb65474_email_py.html  z_f1b38b22aeb65474_security_py.html
migrations/versions/: 2d701ec4ffe0_title.py  6c6f547369e6_description.py
src/models/: models.py
src/repository/: repository.py
src/routes/: auth.py  routes.py  users.py
src/schemas/: schemas.py  user.py
src/utils/: auth.py  dependencies.py  email.py
tests/: conftest.py  test_e2e_auth.py  test_unit_repository.py
